# framework_dasein-rust

./: .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Road_map.md  clippy.toml  deny.toml  note.md  note2.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: graph_vs_linear.rs
crates/agentic-bus/: Cargo.toml
crates/agentic-bus/src/: error.rs  lib.rs  nats.rs  patterns.rs  traits.rs
crates/agentic-core/: Cargo.toml  README.md
crates/agentic-core/src/: error.rs  lib.rs  prelude.rs  types.rs
crates/agentic-core/src/agent/: agent.rs  mod.rs
crates/agentic-core/src/distributed/: allocation.rs  code_assembler.rs  config.rs  error_enricher_validator.rs  executor.rs  incremental_pipeline.rs  liaison_architect.rs  mcp_doc_validator.rs  mod.rs  pool.rs  repair_engine.rs  sandbox_pipeline_validator.rs  sandbox_validator.rs  supervisor.rs  task_decomposer.rs  validator.rs  validator_pipeline.rs
crates/agentic-core/src/distributed/bus/: arbiter.rs  audit.rs  coordinator.rs  deduplicator.rs  error_fingerprint.rs  linter.rs  log_collector.rs  mod.rs  nats_client.rs  pipeline_tracer.rs  rollback.rs  sequencer.rs  state_store.rs  types.rs
crates/agentic-core/src/distributed/graph/: builder.rs  context.rs  edge.rs  executor.rs  integration_test.rs  mod.rs  persistence.rs  superstep.rs  types.rs  workflow.rs
crates/agentic-core/src/distributed/graph/agent/: background.rs  chat_agent.rs  error.rs  memory.rs  mod.rs  persistence.rs  reducer.rs  response.rs  thread.rs  tools.rs  trait_def.rs  types.rs  workflow_agent.rs
crates/agentic-core/src/distributed/graph/executors/: code_assembler.rs  compile_validator.rs  llm_generator.rs  mod.rs  sub_workflow.rs  test_validator.rs
crates/agentic-core/src/patterns/: concurrent.rs  group_chat.rs  handoff.rs  mod.rs  sequential.rs  types.rs
crates/agentic-core/src/protocol/: message.rs  mod.rs
crates/agentic-llm/: Cargo.toml  README.md
crates/agentic-llm/src/: anthropic.rs  error.rs  gemini.rs  lib.rs  ollama.rs  openai.rs  traits.rs
crates/agentic-mcp/: Cargo.toml  README.md
crates/agentic-mcp/src/: error.rs  lib.rs
crates/agentic-mcp/src/client/: config.rs  mod.rs  pool.rs
crates/agentic-mcp/src/server/: mod.rs  tools.rs
crates/agentic-orchestrator/: Cargo.toml
crates/agentic-orchestrator/src/: error.rs  lib.rs  orchestrator.rs  workflow.rs
crates/agentic-sandbox/: Cargo.toml  README.md
crates/agentic-sandbox/src/: docker.rs  error.rs  firecracker.rs  gateway.rs  lib.rs  process.rs  remote.rs  traits.rs
crates/agentic-storage/: Cargo.toml
crates/agentic-storage/src/: error.rs  lib.rs  qdrant_store.rs  redis_store.rs  traits.rs
docs/: ARCHITECTURE.md  CRITICAL_ANALYSIS.md  FEATURES.md  FIRECRACKER_DEPLOYMENT.md  FIRECRACKER_SETUP_COMPLETE.md  GETTING_STARTED.md  GRAPH_ARCHITECTURE.md  MULTI_EXECUTOR.md  NATS_PROTOCOL.md  README.md  ROADMAP_V2.md  VISION.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/api/: bus.md  core.md  index.md  llm.md  mcp.md  orchestrator.md  sandbox.md  storage.md
docs/examples/: chat.md  index.md  single-agent.md
docs/guide/: architecture.md  getting-started.md  index.md  llm-adapters.md
examples/: agent_demo.rs  chat.rs  code_mode_mcp.rs  complex_pipeline.rs  executors_demo.rs  go_executor.rs  graph_persistence_test.rs  graph_refactor.rs  graph_refactor_python.rs  graph_workflow.rs  grounded_loop.rs  grounded_loop_with_mcp.rs  iterative_pipeline.rs  llm_real_test.rs  memory_demo.rs  multi_executor.rs  nats_bus_demo.rs  nats_persistence_demo.rs  patterns_demo.rs  patterns_integration_test.rs  patterns_llm_test.rs  python_executor.rs  scale_test.rs  single_agent.rs  test_gemini.rs  ts_executor.rs  ts_incremental.rs  ts_state_machine_graph.rs  validator_pipeline.rs  validator_pipeline_extreme.rs  validator_pipeline_hard.rs
gateway/: Cargo.toml  README.md  ROADMAP.md  config.example.toml
gateway/crates/gateway-core/: Cargo.toml
gateway/crates/gateway-core/src/: config.rs  error.rs  lib.rs  llm.rs  sandbox.rs  storage.rs
gateway/crates/gateway-llm/: Cargo.toml
gateway/crates/gateway-llm/src/: lib.rs  provider.rs  rate_limit.rs  router.rs
gateway/crates/gateway-llm/src/providers/: anthropic.rs  mod.rs  openai.rs
gateway/crates/gateway-sandbox/: Cargo.toml
gateway/crates/gateway-sandbox/examples/: test_remote.rs
gateway/crates/gateway-sandbox/src/: executor.rs  firecracker.rs  lib.rs  orchestrator.rs  pool.rs  remote.rs
gateway/crates/gateway-server/: Cargo.toml
gateway/crates/gateway-server/src/: lib.rs  main.rs  state.rs
gateway/crates/gateway-server/src/api/: chat.rs  embeddings.rs  filesystem.rs  health.rs  mod.rs  sandbox.rs  vm.rs
gateway/crates/gateway-server/src/dashboard/: auth.rs  handlers.rs  mod.rs  routes.rs  templates.rs
gateway/crates/gateway-server/src/middleware/: auth.rs  logging.rs  mod.rs
gateway/crates/gateway-server/static/: htmx.min.js
gateway/crates/gateway-server/templates/: api_keys.html  base.html  dashboard.html  layout.html  login.html  providers.html  sandboxes.html  usage.html
gateway/crates/gateway-server/templates/partials/: api_key_row.html  pool_stats.html  provider_row.html  recent_logs.html  stats_cards.html
server/: agent.py
server/firecracker-server/: Cargo.toml  README.md
server/firecracker-server/src/: main.rs
