[workspace]
resolver = "2"
members = [
    "crates/agentic-core",
    "crates/agentic-llm",
    "crates/agentic-sandbox",
    "crates/agentic-mcp",
    "crates/agentic-bus",
    "crates/agentic-storage",
    "crates/agentic-orchestrator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/your-org/agentic-rs"
keywords = ["ai", "agents", "llm", "multi-agent", "async"]
categories = ["asynchronous", "api-bindings"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Regex
regex = "1.11"

# Hashing
md5 = "0.7"

# LLM SDKs
async-openai = "0.27"

# MCP
rmcp = { version = "0.14", features = ["server", "client", "transport-io", "macros"] }
schemars = "0.8"

# Message Bus
async-nats = "0.38"

# Storage
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
qdrant-client = "1.13"

# Docker
bollard = "0.18"

# Firecracker MicroVM
firepilot = "1.2"

# Testing
tokio-test = "0.4"
mockall = "0.13"
wiremock = "0.6"

# Workspace crates (internal)
agentic-core = { path = "crates/agentic-core" }
agentic-llm = { path = "crates/agentic-llm" }
agentic-sandbox = { path = "crates/agentic-sandbox" }
agentic-mcp = { path = "crates/agentic-mcp" }
agentic-bus = { path = "crates/agentic-bus" }
agentic-storage = { path = "crates/agentic-storage" }
agentic-orchestrator = { path = "crates/agentic-orchestrator" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

# Root package for examples
[package]
name = "agentic-rs"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = []
remote = ["agentic-sandbox/remote"]

[dependencies]
agentic-llm = { path = "crates/agentic-llm", features = ["all"] }
agentic-core = { path = "crates/agentic-core" }
agentic-sandbox = { path = "crates/agentic-sandbox" }
agentic-mcp = { path = "crates/agentic-mcp" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }

[[example]]
name = "test_gemini"
path = "examples/test_gemini.rs"

[[example]]
name = "chat"
path = "examples/chat.rs"

[[example]]
name = "grounded_loop"
path = "examples/grounded_loop.rs"

[[example]]
name = "code_mode_mcp"
path = "examples/code_mode_mcp.rs"

[[example]]
name = "grounded_loop_with_mcp"
path = "examples/grounded_loop_with_mcp.rs"

[[example]]
name = "validator_pipeline"
path = "examples/validator_pipeline.rs"

[[example]]
name = "validator_pipeline_hard"
path = "examples/validator_pipeline_hard.rs"

[[example]]
name = "validator_pipeline_extreme"
path = "examples/validator_pipeline_extreme.rs"

[[example]]
name = "multi_executor"
path = "examples/multi_executor.rs"

[[example]]
name = "nats_bus_demo"
path = "examples/nats_bus_demo.rs"
