[workspace]
resolver = "2"
members = [
    "crates/gateway-core",
    "crates/gateway-llm",
    "crates/gateway-sandbox",
    "crates/gateway-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/your-org/agentic-gateway"
keywords = ["llm", "gateway", "proxy", "firecracker", "sandbox"]
categories = ["web-programming", "asynchronous"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"

# HTTP server
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
hyper = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono", "uuid"] }

# Cache
deadpool-redis = "0.18"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Configuration
config = "0.14"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"

# Metrics
prometheus = "0.13"

# Auth
jsonwebtoken = "9.3"

# Utils
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.9"
url = "2.5"
base64 = "0.22"
sha2 = "0.10"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Testing
tokio-test = "0.4"
wiremock = "0.6"
mockall = "0.13"

# Internal crates
gateway-core = { path = "crates/gateway-core" }
gateway-llm = { path = "crates/gateway-llm" }
gateway-sandbox = { path = "crates/gateway-sandbox" }
gateway-server = { path = "crates/gateway-server" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
