[package]
name = "agentic-bus"
description = "Message bus for inter-agent communication (NATS)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core
agentic-core = { path = "../agentic-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# NATS
async-nats = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
