[package]
name = "agentic-mcp"
description = "MCP Code Mode - agents write code that calls MCP tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []

[dependencies]
# Async
tokio = { workspace = true, features = ["process", "sync"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP client for MCP calls
reqwest = { workspace = true }

# UUID for temporary dirs
uuid = { workspace = true }

# Internal crates
agentic-sandbox = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
