[package]
name = "dasein-agentic-storage"
description = "Storage adapters (Redis state store, Qdrant vector store)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["redis"]
redis = ["dep:redis"]
qdrant = ["dep:qdrant-client"]
all = ["redis", "qdrant"]

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Storage
redis = { workspace = true, optional = true }
qdrant-client = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
