[package]
name = "firecracker-server"
version = "0.1.0"
edition = "2021"
description = "Remote Firecracker sandbox server for agentic-rs"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID
uuid = { version = "1.11", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Firecracker
firepilot = "1.2"

[[bin]]
name = "firecracker-server"
path = "src/main.rs"
