[package]
name = "gateway-core"
description = "Core types and traits for Agentic Gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
