[package]
name = "gateway-llm"
version = "0.1.0"
edition = "2021"
description = "LLM provider routing and load balancing for Agentic Gateway"

[dependencies]
gateway-core = { path = "../gateway-core" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "2.0"

# Tracing
tracing = "0.1"

# Rate limiting
governor = "0.8"

# Time
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
