[package]
name = "gateway-sandbox"
version = "0.1.0"
edition = "2021"
description = "Firecracker microVM sandbox management for Agentic Gateway"

[dependencies]
gateway-core = { path = "../gateway-core" }

# Async runtime
tokio = { version = "1.0", features = ["full", "process"] }

# HTTP client (for Firecracker API)
reqwest = { version = "0.12", features = ["json"] }
hyper = { version = "1.0", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }

# Unix socket support (via tokio built-in)

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "2.0"

# Tracing
tracing = "0.1"

# Pool management
deadpool = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
