[package]
name = "gateway-server"
version = "0.1.0"
edition = "2021"
description = "HTTP server and API for Agentic Gateway"

[dependencies]
gateway-core = { path = "../gateway-core" }
gateway-llm = { path = "../gateway-llm" }
gateway-sandbox = { path = "../gateway-sandbox" }

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Configuration
config = "0.15"
dotenvy = "0.15"

# Tracing & metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Dashboard
askama = { workspace = true }
tower-cookies = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
http = "1.0"

[dev-dependencies]
axum-test = "17"
tokio-test = "0.4"
